--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,32 @@
 }
 
 body {
-    background-color: #32021F;
+    background-image: url(img/1900x1900-000000-81-0-0.jpg);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
     font-family: 'Open Sans', sans-serif;
-    padding: 5px;
+}
+
+body::after {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: -1;
+}
+
+main {
+    width: 1000px;
+    height: auto;
+    margin: auto;
+    color: white;
 }
 
 h1 {
-    color: #6f7d8c;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
@@ -33,11 +52,9 @@ img {
     display: flexbox;
     width: 1000px;
     height: 500px;
-
 }
 
 h2 {
-    color: #6f7d8c;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     margin: auto;
@@ -45,7 +62,6 @@ h2 {
 }
 
 h3 {
-    color: #6f7d8c;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     margin: auto;
@@ -53,7 +69,6 @@ h3 {
 }
 
 p {
-    color: #6f7d8c;
     padding: 15px;
 }
 
