--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
     background-position: center;
     background-attachment: fixed;
     font-family: 'Open Sans', sans-serif;
+    text-align: justify;
 }
 
 body::after {
@@ -70,6 +71,10 @@ h3 {
 
 p {
     padding: 15px;
+}
+
+ul {
+    margin-left: 30px;
 }
 
 
